added more ledges

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 <body>
   <section class="page">
     <header>
-      <img class="header-logo" src="./assets/img/Mario_Series_Logo.svg.png" alt="Super Mario Logo">
+      <!--<img class="header-logo" src="./assets/img/Mario_Series_Logo.svg.png" alt="Super Mario Logo">
+-->
     </header>
-    
+
+
+
     <canvas id="myCanvas" width="800" height="500"></canvas>
-    
+
     <script src="./assets/js/script.js"></script>
   </section>
 </body>
